# rice-search

./: .env.example  .gitattributes  .gitignore  .hintrc  2026-01-05-command-messageinitcommand-message.txt  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DIMENSION_FIX.md  FILE_PATH_INDEXING_ENHANCEMENT.md  Final-Prompt.md  Makefile  NEW-prompt.md  Origional-prompt.md  README.md  SCORE_NORMALIZATION_FIX.md  SEARCH_LLM_RERANKER_FIXES.md  backend_logs.txt  backend_logs_2.txt  backend_logs_3.txt  backend_logs_4.txt  bentoml_log2.txt  docker-compose.bge-m3.yml  docker-compose.gpu.yml  docker-compose.yml  frontend_logs.txt  qdrant_dir.txt  signature.txt  worker_detailed.txt  worker_full2.txt  worker_logs2.txt  worker_logs3.txt
.agent/future/: xinference_grpc_support.md
.agent/rules/: agent-protocols.md
.agent/workflows/: verification_workflow.md
.claude/: settings.local.json
api/: .env.dev  Dockerfile  bunfig.toml  package.json  start_dev.txt  tsconfig.build.json  tsconfig.json
api/scripts/: download-wasm.sh
api/src/: app.module.ts  main.ts
api/tantivy/: Cargo.toml
api/tantivy/src/: main.rs
backend/: .dockerignore  Dockerfile  Dockerfile.e2e  MCP_README.md  RICEGREP_README.md  RICESEARCH_README.md  check_imports.py  cleanup_duplicates.py  cleanup_models.py  entrypoint.sh  fix_model_types.py  memory_profiler.py  models.json  pyproject.toml  pytest.ini  settings.yaml  setup_keycloak.py
backend/scripts/: debug_dense.py  debug_search.py  debug_splade.py  init_ollama.py
backend/src/: main.py  worker.py
backend/src/api/: deps.py
backend/src/api/v1/: dependencies.py
backend/src/api/v1/endpoints/: files.py  ingest.py  metrics.py  search.py  settings.py  stores.py
backend/src/api/v1/endpoints/admin/: __init__.py  config.py  public.py
backend/src/cli/: mcp_stdio.py
backend/src/cli/ricegrep/: __init__.py  api_client.py  config.py  main.py  search.py  watch.py
backend/src/cli/ricesearch/: __init__.py  api_client.py  config.py  ignore.py  main.py  search.py  watch.py
backend/src/core/: config.py  config.py.old  device.py  security.py  settings_manager.py  telemetry.py
backend/src/db/: qdrant.py  redis_client.py
backend/src/migrations/: migrate_sparse.py
backend/src/services/: model_manager.py
backend/src/services/admin/: admin_store.py
backend/src/services/inference/: __init__.py  bentoml_client.py  local_reranker.py  ollama_client.py  tei_client.py  triton_client.py  unified_inference_client.py  vllm_client.py  xinference_client.py
backend/src/services/ingestion/: ast_parser.py  chunker.py  indexer.py  parser.py
backend/src/services/mcp/: __init__.py  mcp_daemon.py  mcp_server.py  tools.py
backend/src/services/query/: analyzer.py
backend/src/services/rag/: engine.py
backend/src/services/retrieval/: __init__.py  bm42_encoder.py  fusion.py  splade_encoder.py  tantivy_client.py
backend/src/services/search/: query_analyzer.py  reranker.py  retriever.py  sparse.py  sparse_embedder.py
backend/src/tasks/: ingestion.py
backend/src/worker/: celery_app.py  start_worker.py
backend/tests/: conftest.py  test_admin_store.py  test_api_admin.py  test_api_files.py  test_api_search.py  test_api_stores.py  test_deps_unit.py  test_file_indexing.py  test_indexer_ast.py  test_ingestion_indexer.py  test_ingestion_parser.py  test_model_manager.py  test_model_manager_dynamic.py  test_model_ttl.py  test_query_analyzer.py  test_rag_engine.py  test_rbac.py  test_sanity.py  test_search_services.py  test_sparse_embedder.py  test_sparse_search_repro.py  test_tasks_ingestion.py  test_telemetry.py
backend/tests/e2e/: test_ui_sanity.py  test_ui_workflow.py
backend/tests/load/: locustfile.py
benchmark_data/: docker-compose.benchmark.yml
client/: Cargo.toml
client/src/: main.rs
client/src/commands/: mod.rs  search.rs  watch.rs
client/src/core/: api.rs  config.rs  hashing.rs  mod.rs
client/src/watcher/: scanner.rs
deploy/: .env.example  docker-compose.enterprise.yml  docker-compose.yml  docker-compose.yml.backup  flat.json  wrapped.json
deploy/bentoml/: Dockerfile  bentofile.yaml  entrypoint.sh  service.py
deploy/sglang-server/: Dockerfile  llm_server.py  server.py
deploy/unified-inference/: .dockerignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  service.py
deploy/unified-inference/api/: __init__.py  app.py  errors.py  routes.py
deploy/unified-inference/backends/: __init__.py  base.py  cpu_backend.py  ollama.py  sglang.py
deploy/unified-inference/config/: __init__.py  models.py  models.yaml  settings.py
deploy/unified-inference/lifecycle/: __init__.py  manager.py
deploy/unified-inference/router/: __init__.py  offload.py  proxy.py  selector.py
docker/bge-m3/: Dockerfile  README.md  entrypoint.sh  main.py  requirements.txt
docs/: README.md  api.md  architecture.md  build-and-release.md  cli.md  configuration.md  deployment.md  development.md  future_plans.md  getting-started.md  operations.md  security.md  testing.md  troubleshooting.md
docs/history/: DEDUPLICATION_FIX.md  DEPENDENCY_UPDATES.md  DOCUMENTATION_REPORT.md  MODEL_OPTIMIZATION_RECOMMENDATIONS.md  QUICK_CONFIG_MODERNIZATION.md  README.md  SCORE_NORMALIZATION_FIX.md  SETTINGS_AUTO_PERSIST.md  SETTINGS_SYSTEM.md  SETTINGS_UI_SUMMARY.md  SGLANG_MIGRATION_PLAN.md  UI_IMPROVEMENTS.md  (+1 more)
frontend/: Dockerfile  entrypoint.sh  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace  (+1 more)
go-search/: .env.example  .gitignore  .golangci.yml  CONNECTION_INTEGRATION.md  DEVICE_INFO_IMPLEMENTATION.md  Makefile  README.md  WEB_UI_UPDATE.md  build_err.txt  build_error.txt  go.mod  go.sum  target_fail.txt  test_output.txt  test_output_full.txt  test_output_v3.txt  test_output_v5.txt
ricegrep/: LICENSE  README.md  package.json
rust-tantivy/: Cargo.toml  Dockerfile
rust-tantivy/src/: index.rs  main.rs  search.rs
scripts/: benchmark_modes.sh  debug_conn.py  docker-compose.benchmark.gpu.yml  docker-compose.benchmark.yml  init_store.py  reindex.py  setup_keycloak.py  smoke_test.py  smoke_test.sh
web-ui/: .env.dev  Dockerfile  next.config.js  package.json
(+426 files in other folders)
