[project]
name = "rice-search-backend"
version = "0.1.0"
description = "Enterprise Neural Search Backend"
authors = [{name = "Rice Search Team"}]
requires-python = ">=3.12,<3.13"  # Python 3.12 for compatibility
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "celery>=5.4.0",
    "redis>=5.0.8",
    "qdrant-client>=1.11.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "unstructured>=0.11.0",
    "sentence-transformers>=3.1.0",

    # Latest stable ML/AI dependencies (Jan 2025)
    "torch==2.5.1",  # Latest for CUDA 12.1
    "transformers==4.57.3",
    "accelerate==1.12.0",

    "pyjwt[crypto]>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "typer[all]>=0.9.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-requests>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "mcp>=0.9.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "pathspec>=0.11.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.0",
    "psutil>=5.9.0",
    "grpcio>=1.60.0",
    "tritonclient[grpc]>=2.42.0",
    "fastembed>=0.2.0",  # For BM42 sparse vectors
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pytest-playwright>=0.7.0",
    "playwright>=1.57.0",
    "pytest-cov>=4.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
ricesearch = "src.cli.ricesearch.main:main"

