[package]
name = "ricesearch"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
notify = "6.1"
anyhow = "1.0"
config = "0.13"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
colored = "2.1"
log = "0.4"
env_logger = "0.10"
tokio-util = { version = "0.7", features = ["codec", "io"] }
