[package]
name = "tantivy_service"
version = "0.1.0"
edition = "2021"
description = "Rice Search - Tantivy-based sparse search service for hybrid code search"

[[bin]]
name = "tantivy-cli"
path = "src/main.rs"

[dependencies]
tantivy = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
