[project]
name = "unified-inference"
version = "1.0.0"
description = "Multi-model inference orchestrator for SGLang backends"
authors = [{name = "Rice Search Team"}]
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core API dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "pyyaml>=6.0.2",
    "python-multipart>=0.0.12",
    
    # SGLang inference engine
    "sglang[all]==0.5.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
